syntax = "proto3";

package auth;

// Auth Service Definition
service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc ValidateUser (ValidateUserRequest) returns (ValidateUserResponse);
  rpc Refresh (RefreshRequest) returns (RefreshResponse);
}

// Register Request/Response
message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string phone = 4;
  string address = 5;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
  UserData user = 3;
  string accessToken = 4;
  string refreshToken = 5;
}

// Login Request/Response
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  UserData user = 3;
  string accessToken = 4;
  string refreshToken = 5;
}

// Validate User Request/Response
message ValidateUserRequest {
  string userId = 1;
}

message ValidateUserResponse {
  bool success = 1;
  UserData user = 2;
  string message = 3;
}

// Refresh Token Request/Response
message RefreshRequest {
  string refreshToken = 1;
}

message RefreshResponse {
  bool success = 1;
  string accessToken = 2;
  string refreshToken = 3;
  string message = 4;
}

// User Data
message UserData {
  string id = 1;
  string email = 2;
  string name = 3;
  string phone = 4;
  string address = 5;
  string role = 6;
}
